--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Create Your Account</h1>
+<%= form_for(@user) do |f| %>
+		<p>Name: <%= f.text_field :name %></p>
+		<p>Email: <%= f.text_field :email %></p>
+		<p>Password: <%= f.password_field :password %></p>
+		<p>Confirm Password: <%= f.password_field :password_confirmation %></p>
+		<p><%= f.submit %></p>
+<% end %>
+  
