--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,9 +12,8 @@
  *
  *= require_tree .
  *= require_self
- *= require navbar
+ *= require layout
  */
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
