--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,14 +49,14 @@
       <% if @user.errors.any? %>
         <div class="alert">
           <% @user.errors.full_messages.each do |message| %>
-            <%= message %>
+            <%= message %><br>
           <% end %>
         </div>
       <% end %>
 
       <% if flash[:message] %>
         <div class="alert">
-          <%= flash[:message] %>
+          <%= flash[:message] %><br>
         </div>
       <% end %>
 
