--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,13 +45,15 @@
           
         </div>
       </nav>
-
-      <% if @user.errors.any? %>
-        <div class="alert">
-          <% @user.errors.full_messages.each do |message| %>
-            <%= message %><br>
-          <% end %>
-        </div>
+      
+      <% if @user %>
+        <% if @user.errors.any? %>
+          <div class="alert">
+            <% @user.errors.full_messages.each do |message| %>
+              <%= message %><br>
+            <% end %>
+          </div>
+        <% end %>
       <% end %>
 
       <% if flash[:message] %>
