--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,9 @@
               <li class="nav-item">
                 <%= link_to "See All Exercises", exercises_path, class:"nav-link" %>
               </li>
+              <li class="nav-item" id="logout">
+                <%= link_to "Logout", logout_path, class:"nav-link" %>
+              </li>
 
             <% else %>
 
