--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+
+<div class="container center">
+	<h1><%= @user.name %>'s Account Page</h1>
+</div>
+
+<div class="container">
+<%= link_to "Edit Account Details", edit_user_path(@user) %>
+</div>
+
+<br><br><br>
+
+<div class="container">
+	<h3><%= link_to "My Workouts", user_workouts_path(@user) %></h3>
+</div>
+
+<br><br><br>
+
+<div class="container">
+	<h3><%= link_to "Add A Workout", new_user_workout_path(@user) %></h3>
+</div>
