--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="container">
+	<h1>Edit Your Account</h1>
+</div>
+<br>
+
+<%= render partial: 'form', locals: {user: @user} %>
