--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,6 @@
 <div class="container">
-
-<h1>Create Your Account</h1>
-<%= form_for(@user) do |f| %>
-		<div class='form-group <%= 'alert' if @user.errors[:name].any? %>'><h4>Name:</h4> <%= f.text_field :name, class:'form-control' %></div>
-		<div class='form-group <%= 'alert' if @user.errors[:email].any? %>'><h4>Email:</h4> <%= f.email_field :email, class:'form-control' %></div>
-		<div class='form-group <%= 'alert' if flash[:message] || @user.errors[:password].any? %>'><h4>Password:</h4> <%= f.password_field :password, class:'form-control' %></div>
-		<div class='form-group <%= 'alert' if flash[:message] || @user.errors[:password].any? %>'><h4>Confirm Password:</h4> <%= f.password_field :password_confirmation, class:'form-control' %></div>
-		<div class='form-group'><%= f.submit %></div>
-<% end %>
-  
+	<h1>Create Your Account</h1>
 </div>
+<br>
 
-
+<%= render partial: 'form', locals: {user: @user} %>
