--- a/app/views/workouts/new.html.erb
+++ b/app/views/workouts/new.html.erb
@@ -1,20 +1,24 @@
-<% require 'date' %>
-
 <h1>Add A Workout</h1>
 
 
-<%= form_for(@user) do |f| %>
+<%= form_for(@user, {url: user_workouts_path(@user), method: :post}) do |f| %>
+
 	<%= f.fields_for @workout do |w| %>
 
 		<div class='form-group <%= 'alert' if flash[:message] || @user.errors[:password].any? %>'>
-			Date:     <%= w.date_select :date %>
+			Date:     <%= w.date_field :date, {value: Date.today} %>
+			Day:     <%= w.text_field :date, {value: Date.today.wday} %>
+		</div>
+
+		<div class='form-group <%= 'alert' if flash[:message] || @user.errors[:password].any? %>'>
+			Bodypart: <%= w.text_field :bodypart, options = {rows:"4", cols:"50", placeholder:"ex. 'Back & Biceps'"} %>
 		</div>
 
 		<div class='form-group <%= 'alert' if flash[:message] || @user.errors[:password].any? %>'>
 			Comments: <%= w.text_area :comments, options = {rows:"4", cols:"50", placeholder:"ex. 'Felt great today, best workout ever!' or 'Worked Back & Biceps'"} %>
 		</div>
 
-		<%= w.submit %>
+		<%= w.submit %> (You'll be able to add Exercises on the next page)
 
 	<% end %>
 
