add an exercise functionality working

--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -38,7 +38,7 @@
 				<div class="form-group">
 					Reps: <%= f.number_field :reps %>
 				</div>
-
+				<%= f.hidden_field :workout_id, value:@workout.id %>
 				<%= f.submit "Save Exercise" %>
 				
 		<% end %>
