--- a/app/views/workouts/new.html.erb
+++ b/app/views/workouts/new.html.erb
@@ -1,26 +1,25 @@
 <h1>Add A Workout</h1>
 
 
-<%= form_for(@user, {url: user_workouts_path(@user), method: :post}) do |f| %>
 
-	<%= f.fields_for @workout do |w| %>
+
+	<%= form_for(@workout, url:user_workouts_path(@user)) do |w| %>
 
 		<div class='form-group <%= 'alert' if flash[:message] || @user.errors[:password].any? %>'>
-			Date:     <%= w.date_field :date, {value: Date.today} %>
-			Weekday:     <%= w.text_field :weekday, {value: calc_weekday(Date.today.wday)} %>
+			Date:     <%= w.date_field :date, {value: Date.today, class:'form-control'} %>
+			Weekday:     <%= w.text_field :weekday, {value: calc_weekday(Date.today.wday), class:'form-control'} %>
 		</div>
 
 		<div class='form-group <%= 'alert' if flash[:message] || @user.errors[:password].any? %>'>
-			Bodypart: <%= w.text_field :bodypart, options = {rows:"4", cols:"50", placeholder:"ex. 'Back & Biceps'"} %>
+			Bodypart: <%= w.text_field :bodypart, options = {rows:"4", cols:"50", placeholder:"ex. 'Back & Biceps'", class:'form-control'} %>
 		</div>
 
 		<div class='form-group <%= 'alert' if flash[:message] || @user.errors[:password].any? %>'>
-			Comments: <%= w.text_area :comments, options = {rows:"4", cols:"50", placeholder:"ex. 'Felt great today, best workout ever!' or 'Worked Back & Biceps'"} %>
+			Comments: <%= w.text_area :comments, options = {rows:"4", cols:"50", placeholder:"ex. 'Felt great today, best workout ever!' or 'Worked Back & Biceps'", class:'form-control'} %>
 		</div>
 
 		<%= w.submit %> (You'll be able to add Exercises on the next page)
 
 	<% end %>
 
-<% end %>
   
