added delete exercise functionality

--- a/app/views/exercises/edit.html.erb
+++ b/app/views/exercises/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Exercises#edit</h1>
-<p>Find me in app/views/exercises/edit.html.erb</p>
+<h1>Edit Exercise</h1>
+
+<%= render partial:'form', locals:{exercise: @exercise, workout: @exercise.workout} %>
+
+<%= form_tag(exercise_path(@exercise),method: :delete) do %>
+		<%= submit_tag "Delete Exercise" %>
+<% end %>
