--- a/app/views/workouts/new.html.erb
+++ b/app/views/workouts/new.html.erb
@@ -3,6 +3,6 @@
 
 
 
-	<%= render partial: 'form', locals: {workout: @workout} %>
+	<%= render partial: 'form', locals: {workout: @workout, user: @workout.user} %>
 
   
