--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@user, @workout]) do |w| %>
+<%= form_for([user, workout]) do |w| %>
 
 		<div class='form-group <%= 'alert' if flash[:message] || @user.errors[:password].any? %>'>
 			Date:     <%= w.date_field :date, {value: Date.today, class:'form-control'} %>
