--- a/app/views/workouts/edit.html.erb
+++ b/app/views/workouts/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Edit Workout</h1>
 
-<%= render partial: 'form', locals: {workout: @workout} %>
+<%= render partial: 'form', locals: {workout: @workout, user: @workout.user} %>
