--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -5,7 +5,7 @@
 		</div>
 
 		<div class="form-group">
-			Bodypart worked: <%= f.text_field :bodypart, class:'form-control' %>
+			Bodypart worked: <%= collection_select :exercise, :bodypart, Exercise.all.uniq, :bodypart, :bodypart, class:'form-control' %>
 		</div>
 
 		<div class="form-group">
