added error messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,6 +69,26 @@
         <% end %>
       <% end %>
 
+      <% if @workout %>
+        <% if @workout.errors.any? %>
+          <div class="alert">
+            <% @workout.errors.full_messages.each do |message| %>
+              <%= message %><br>
+            <% end %>
+          </div>
+        <% end %>
+      <% end %>
+
+      <% if @exercise %>
+        <% if @exercise.errors.any? %>
+          <div class="alert">
+            <% @exercise.errors.full_messages.each do |message| %>
+              <%= message %><br>
+            <% end %>
+          </div>
+        <% end %>
+      <% end %>
+
       <% if flash[:message] %>
         <div class="alert">
           <%= flash[:message] %><br>
