--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -1,15 +1,18 @@
 <%= form_for([user, workout]) do |w| %>
 
-		<div class='form-group <%= 'alert' if flash[:message] || @user.errors[:password].any? %>'>
+		<div class='form-group <%= 'alert' if flash[:message] || workout.errors[:date].any? %>'>
 			Date:     <%= w.date_field :date, {value: Date.today, class:'form-control'} %>
+		</div>
+
+		<div class='form-group <%= 'alert' if flash[:message] || workout.errors[:weekday].any? %>'>
 			Weekday:     <%= w.text_field :weekday, {value: calc_weekday(Date.today.wday), class:'form-control'} %>
 		</div>
 
-		<div class='form-group <%= 'alert' if flash[:message] || @user.errors[:password].any? %>'>
+		<div class='form-group <%= 'alert' if flash[:message] || workout.errors[:bodypart].any? %>'>
 			Bodypart: <%= w.text_field :bodypart, options = {rows:"4", cols:"50", placeholder:"ex. 'Back & Biceps'", class:'form-control'} %>
 		</div>
 
-		<div class='form-group <%= 'alert' if flash[:message] || @user.errors[:password].any? %>'>
+		<div class='form-group'>
 			Comments: <%= w.text_area :comments, options = {rows:"4", cols:"50", placeholder:"ex. 'Felt great today, best workout ever!' or 'Worked Back & Biceps'", class:'form-control'} %>
 		</div>
 
