--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -1,21 +1,24 @@
+
+ 
+
 <%= form_for(exercise) do |f| %>
 		
-		<div class="form-group">
+		<div class="form-group <%= 'alert' if flash[:message] || exercise.errors[:name].any? %>">
 			Exercise Name: <%= f.text_field :name, class:'form-control' %>
 		</div>
 
-		<div class="form-group">
+		<div class="form-group <%= 'alert' if flash[:message] || exercise.errors[:bodypart].any? %>">
 			Bodypart worked: <%= collection_select :exercise, :bodypart, Exercise.unique_bodyparts, :bodypart, :bodypart, class:'form-control' %>
 		</div>
 
-		<div class="form-group">
+		<div class="form-group <%= 'alert' if flash[:message] || exercise.errors[:sets].any? %>">
 			Sets: <%= f.number_field :sets, class:'form-control' %>
 		</div>
 
-		<div class="form-group">
+		<div class="form-group <%= 'alert' if flash[:message] || exercise.errors[:reps].any? %>">
 			Reps: <%= f.number_field :reps, class:'form-control' %>
 		</div>
-		<%= f.hidden_field :workout_id, value:workout.id %>
+		<%= f.hidden_field :workout_id, value: workout.id %>
 		<%= f.submit "Add to Workout" %>
 		
 <% end %>
