--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -20,11 +20,9 @@
 
 
 
-	<p>*** click Exercise name to edit. ***</p>
+	<p>*** To edit or delete an exercise, click the exercise name. ***</p>
 
 
-
-<%#= link_to "Edit Workout", edit_user_workout_path(@workout.user, @workout) %>
 
 <br><br><br>
 
