--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -7,6 +7,10 @@
 			Exercise Name: <%= f.text_field :name, class:'form-control' %>
 		</div>
 
+		<div class="form-group <%= 'alert' if flash[:message] || exercise.errors[:name].any? %>">
+			Exercise Name: <%= collection_select :exercise, :name, Exercise.all.uniq, :name, :name, class:'form-control' %>
+		</div>
+
 		<div class="form-group <%= 'alert' if flash[:message] || exercise.errors[:bodypart].any? %>">
 			Bodypart worked: <%= collection_select :exercise, :bodypart, Exercise.unique_bodyparts, :bodypart, :bodypart, class:'form-control' %>
 		</div>
