--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -15,9 +15,10 @@ Filter by Bodypart:
 			Exercise Name: <%= collection_select :exercise, :name, @exercises, :name, :name, class:'form-control' %>
 		</div>
 
-		<!-- <div class="form-group <%#= 'alert' if flash[:message] || exercise.errors[:bodypart].any? %>">
-			Bodypart worked: <%#= collection_select :exercise, :bodypart, Exercise.unique_bodyparts, :bodypart, :bodypart, class:'form-control' %>
-		</div> -->
+
+		 <div class="form-group <%= 'alert' if flash[:message] || exercise.errors[:bodypart].any? %>">
+			Bodypart worked: <%= collection_select :exercise, :bodypart, @exercises, :bodypart, :bodypart, class:'form-control' %>
+		</div> 
 
 		<div class="form-group <%= 'alert' if flash[:message] || exercise.errors[:sets].any? %>">
 			Sets: <%= f.number_field :sets, class:'form-control' %>
@@ -26,6 +27,8 @@ Filter by Bodypart:
 		<div class="form-group <%= 'alert' if flash[:message] || exercise.errors[:reps].any? %>">
 			Reps: <%= f.number_field :reps, class:'form-control' %>
 		</div>
+
+
 		<%= f.hidden_field :workout_id, value: workout.id %>
 		<%= f.submit "Add to Workout" %>
 		
