updated exercise form and added exercise#update logic

--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -30,6 +30,6 @@ Filter by Bodypart:
 
 
 		<%= f.hidden_field :workout_id, value: workout.id %>
-		<%= f.submit "Add to Workout" %>
+		<%= f.submit  %>
 		
 <% end %>
