--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,1 +1,10 @@
-<h1>hello world</h1>
+<div class="container" style='text-align:center;'>
+
+<h1 >Welcome to My Workout Tracker</h1>
+
+<p>Please <%= link_to "Sign Up", new_user_path %> or <%= link_to "Login", login_path %>.</p>
+
+
+</div>
+<%= image_tag('db.jpg', class: 'img-responsive') %>
+
