--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,9 @@
                 <%= link_to "My Workouts", user_workouts_path(current_user), class:"nav-link" %>
               </li>
               <li class="nav-item">
+                <%= link_to "New Workout", new_user_workout_path(current_user),class:"nav-link" %>
+              </li>
+              <li class="nav-item">
                 <%= link_to "See All Exercises", exercises_path, class:"nav-link" %>
               </li>
               <li class="nav-item" id="logout">
