cleaning up forms using field_with_errors

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -6,7 +6,7 @@ body {
   margin-bottom: 20px;
 }
 
-div.alert {
+div.alert, div.field_with_errors {
 	border: 1px solid red;
 	font-weight: bold;
 }
