--- a/app/views/workouts/_form.html.erb
+++ b/app/views/workouts/_form.html.erb
@@ -1,14 +1,26 @@
 <%= form_for([user, workout]) do |w| %>
 
-		<div class='form-group <%= 'alert' if flash[:message] || workout.errors[:date].any? %>'>
+	<% if workout.errors.any?  %>
+	  <div class="alert">
+	    <h5>There were some errors:</h5>
+	    <ul>
+	      <% workout.errors.full_messages.each do |message| %>
+	        <li><%= message %></li>
+	      <% end %>
+	    </ul>
+	  </div>
+	<% end %>
+
+
+		<div class='form-group'>
 			Date:     <%= w.date_field :date, {value: Date.today, class:'form-control'} %>
 		</div>
 
-		<div class='form-group <%= 'alert' if flash[:message] || workout.errors[:weekday].any? %>'>
+		<div class='form-group'>
 			Weekday:     <%= w.text_field :weekday, {value: calc_weekday(Date.today.wday), class:'form-control'} %>
 		</div>
 
-		<div class='form-group <%= 'alert' if flash[:message] || workout.errors[:bodypart].any? %>'>
+		<div class='form-group'>
 			Bodypart: <%= w.text_field :bodypart, options = {rows:"4", cols:"50", placeholder:"ex. 'Back & Biceps'", class:'form-control'} %>
 		</div>
 
