--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -2,7 +2,10 @@
 
 <h1 >Welcome to My Workout Tracker</h1>
 
-<p>Please <%= link_to "Sign Up", new_user_path %> or <%= link_to "Login", login_path %>.</p>
+<% if !logged_in? %>
+	<p>Please <%= link_to "Sign Up", new_user_path %> or <%= link_to "Login", login_path %>.</p>
+<% end %>
+	
 
 
 </div>
