--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container center">
-	<h1><%= @user.name %>'s Account Page</h1>
+	<h1><%= @user.name.upcase %>'s Account Page</h1>
 </div>
 
 <div class="container">
