--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-	<h1><%= "#{@workout.bodypart} - #{@workout.weekday}, #{@workout.date.mon}/#{@workout.date.day}/#{@workout.date.year}" %></h1>
+	<h1><%= "#{@workout.bodypart.upcase} - #{@workout.weekday}, #{@workout.date.mon}/#{@workout.date.day}/#{@workout.date.year}" %></h1>
 
 	<br>
 
