--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,27 +1,31 @@
 <div class="container">
 
 	<% if user.errors.any? %>
-  <div class="alert">
-    <h5>There were some errors:</h5>
-    <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
+	  <div class="alert">
+	    <h5>There were some errors:</h5>
+	    <ul>
+	      <% user.errors.full_messages.each do |message| %>
+	        <li><%= message %></li>
+	      <% end %>
+	    </ul>
+	  </div>
+	<% end %>
 
 	<%= form_for(user) do |f| %>
-			<div class="form-group "><h4>Name:</h4> <%= f.text_field :name, class:'form-control' %>
+			<div class="form-group ">
+				<h4>Name:</h4> <%= f.text_field :name, class:'form-control' %>
 			</div>
 
-			<div class="form-group"><h4>Email:</h4> <%= f.email_field :email, class:'form-control' %>
+			<div class="form-group">
+				<h4>Email:</h4> <%= f.email_field :email, class:'form-control' %>
 			</div>
 
-			<div class="form-group"><h4>Password:</h4> <%= f.password_field :password, class:'form-control' %>
+			<div class="form-group">
+				<h4>Password:</h4> <%= f.password_field :password, class:'form-control' %>
 			</div>
 
-			<div class="form-group"><h4>Confirm Password:</h4> <%= f.password_field :password_confirmation, class:'form-control' %>
+			<div class="form-group">
+				<h4>Confirm Password:</h4> <%= f.password_field :password_confirmation, class:'form-control' %>
 			</div>
 
 			<div class='form-group'><%= f.submit %></div>
