--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -9,3 +9,8 @@
 	<% end %>
 
 </div>	
+
+<br><br><br>
+<div class="container">
+	<h3><%= link_to "New Workout", new_user_workout_path(@user) %></h3>
+</div>
